# token-attack

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  token-init-program.ts  token-mint-program.ts  tsconfig.json  types.d.ts
programs/token_attack_program/: Cargo.toml
programs/token_attack_program/src/: lib.rs
tests/: token-attack-program.ts  token-mint.ts
