[package]
name = "token_attack_program"
version = "0.1.0"
description = "Anchor-based prototype for demonstrating swap attack with transaction batching on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"