[package]
name = "token_attack_program"
version = "0.1.0"
description = "Anchor-based prototype for demonstrating swap attack with transaction batching on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }

#cargo update -p bytemuck_derive@1.9.2 --precise 1.8.1